--- a/PlatformService/appsettings.Production.json
+++ b/PlatformService/appsettings.Production.json
@@ -1,3 +1,6 @@
 {
-  "CommandService": "http://commands-clusterip-srv:80/api/c/platforms"
+  "CommandService": "http://commands-clusterip-srv:80/api/c/platforms",
+  "ConnectionStrings": {
+    "PlatformsConn": "Data Source=mssql-clusterip-srv,1433;Initial Catalog=platformsdb;User ID=sa;Password=pa55w0rd!;Encrypt=False;"
+  }
 }
