--- a/CommandsService/CommandsService.csproj
+++ b/CommandsService/CommandsService.csproj
@@ -9,6 +9,7 @@
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
         <PackageReference Include="Google.Protobuf" Version="3.24.1" />
+        <PackageReference Include="Grpc.AspNetCore" Version="2.55.0" />
         <PackageReference Include="Grpc.Net.Client" Version="2.55.0" />
         <PackageReference Include="Grpc.Tools" Version="2.57.0">
           <PrivateAssets>all</PrivateAssets>
